# SolidJSGUI

./: .gitignore  .gitmodules  .releaserc  CHANGELOG.md  DockerFile  ETVR.code-workspace  README.md
.github/repo-tools/scripts/: prepareCMD.sh
.github/workflows/: build.yml
GUI/ETVR/: .gitignore  DevDocs.md  ETVR.code-workspace  index.html  package.json  pnpm-lock.yaml  postcss.config.cjs  tailwind.config.cjs  tsconfig.json  vite.config.ts
GUI/ETVR/.tours/: etvr-soliudgui-docs.tour
GUI/ETVR/assets/images/: index.ts
GUI/ETVR/public/: splashscreen.html
GUI/ETVR/public/firmware/: manifest.json
GUI/ETVR/src/: app.tsx  docs.tsx  main.tsx  root.tsx  vite-env.d.ts
GUI/ETVR/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
GUI/ETVR/src-tauri/.cargo/: config.toml
GUI/ETVR/src-tauri/src/: main.rs
GUI/ETVR/src-tauri/src/lib/api/: Cargo.toml  package.json
GUI/ETVR/src-tauri/src/lib/api/src/: lib.rs
GUI/ETVR/src-tauri/src/lib/splashscreen/: Cargo.toml  index.ts  package.json
GUI/ETVR/src-tauri/src/lib/splashscreen/src/: lib.rs
GUI/ETVR/src-tauri/src/lib/util/src/: prelude.rs
GUI/ETVR/src-tauri/src/modules/: mod.rs  rest_client.rs  tauri_commands.rs
GUI/ETVR/src-tauri/src/modules/m_dnsquery/: mod.rs
GUI/ETVR/src-tauri/src/modules/python_backend/: mod.rs
GUI/ETVR/src-tauri/src/modules/rest_client/: mod.rs
GUI/ETVR/src-tauri/src/modules/tauri_commands/: mod.rs
GUI/ETVR/src/components/: Counter.tsx
GUI/ETVR/src/components/AppSettings/Button/: index.tsx
GUI/ETVR/src/components/AppSettings/DeveloperSettings/: DeveloperSettings.tsx
GUI/ETVR/src/components/AppSettings/FilterParameters/: index.tsx
GUI/ETVR/src/components/AppSettings/GeneralSettings/: index.tsx
GUI/ETVR/src/components/AppSettings/NetworkSettings/: NetworkSettings.tsx
GUI/ETVR/src/components/AppSettings/OscSettings/: index.tsx
GUI/ETVR/src/components/AppSettings/TrackingAlghoritmSettings/: index.tsx
GUI/ETVR/src/components/AppSettings/TrackingAlgorithmSettings/: index.tsx
GUI/ETVR/src/components/Button/: index.tsx
GUI/ETVR/src/components/Camera/: index.css  index.tsx  styles.css
GUI/ETVR/src/components/CustomButton/: index.tsx
GUI/ETVR/src/components/CustomSlideAnimation/: index.tsx
GUI/ETVR/src/components/FirmwareList/: index.tsx  styles.css
GUI/ETVR/src/components/Form/: index.tsx
GUI/ETVR/src/components/Input/: index.tsx
GUI/ETVR/src/components/Inputs/: index.tsx
GUI/ETVR/src/components/List/: List.tsx
GUI/ETVR/src/components/Loader/: index.tsx  styles.css
GUI/ETVR/src/components/Loaders/: index.tsx
GUI/ETVR/src/components/Modal/: index.tsx
GUI/ETVR/src/components/NewMenu/: index.tsx  styles.css
GUI/ETVR/src/components/NewWindow/: index.tsx  styles.css
GUI/ETVR/src/components/Notifications/: index.tsx
GUI/ETVR/src/components/ProgessBar/: index.tsx  style.css
GUI/ETVR/src/components/RangeInput/: index.tsx  styles.css
GUI/ETVR/src/components/Selection/: index.tsx  styles.css
GUI/ETVR/src/components/Settings/: index.tsx
GUI/ETVR/src/components/Skeleton/: index.tsx
GUI/ETVR/src/components/Updater/: index.tsx
GUI/ETVR/src/components/WebSerial/: index.tsx
GUI/ETVR/src/components/WebSocket/: index.ts  index.tsx
GUI/ETVR/src/components/header/: index.tsx  styles.css
GUI/ETVR/src/pages/404/: index.tsx
GUI/ETVR/src/pages/AppSettings/: index.tsx
GUI/ETVR/src/pages/CropSettings/: index.tsx
GUI/ETVR/src/pages/Home/: index.css  index.tsx
GUI/ETVR/src/pages/Settings/: index.tsx  styles.css
GUI/ETVR/src/pages/appSettings/: index.tsx
GUI/ETVR/src/pages/errors/: index.tsx
GUI/ETVR/src/routes/: Routes.tsx  index.tsx
GUI/ETVR/src/static/inputs/: index.tsx
GUI/ETVR/src/static/skeletons/: index.ts
GUI/ETVR/src/static/theme/: theme.ts
GUI/ETVR/src/static/types/: index.d.ts  index.ts  tauri_bindings.ts
GUI/ETVR/src/store/api/: endpoints.ts  ghAPI.ts  restAPI.ts  selectors.ts  websocket.ts
GUI/ETVR/src/store/camera/: camera.ts  selectors.ts
GUI/ETVR/src/store/mdns/: mdns.ts  selectors.ts
GUI/ETVR/src/store/tauriStore/: index.ts
GUI/ETVR/src/store/ui/: selectors.ts  ui.ts
GUI/ETVR/src/styles/: docs-imports.css  header-wrapper.css  imports.css  index.css  scrollbar.css
GUI/ETVR/src/utils/: enums.ts  index.ts  utils.ts  utils.tsx
GUI/ETVR/src/utils/actions/: index.tsx
GUI/ETVR/src/utils/hooks/: usePathFilter.ts  useRequest.ts
GUI/ETVR/src/views/AppSettings/: index.tsx
GUI/ETVR/src/views/CropSettings/: index.css  index.tsx
GUI/ETVR/src/views/Home/: index.css  index.tsx
GUI/ETVR/src/views/Settings/: index.tsx
GUI/ETVR/src/windows/docs/: docs.tsx  index.html
GUI/ETVR/src/windows/splashscreen/: index.html  index.tsx
GUI/ETVR/src/windows/webserial/: index.html  index.tsx  webserial.tsx
GUI/assets/: app_architecture_diagram.drawio
app/: package.json  pnpm-lock.yaml  pnpm-workspace.yaml
app/assets/images/: index.ts
app/src/: main.tsx
app/src-tauri/: tauri.conf.json
app/src-tauri/src/: main.rs
app/src-tauri/src/lib/splashscreen/: Cargo.toml
app/src-tauri/src/modules/: mod.rs
app/src/components/AppSettings/OscSettings/: index.tsx
app/src/components/Camera/: index.tsx
app/src/components/Camera/AddNewCamera/: index.tsx
app/src/components/Camera/CreateCamera/: index.tsx
app/src/components/CustomButton/: index.tsx
app/src/components/List/: List.tsx
app/src/components/List/ListHeader/: ListHeader.tsx
app/src/components/Loader/: index.tsx  styles.css
app/src/components/RangeInput/: index.tsx
app/src/components/Settings/CameraConnectionStatus/: CameraInfo.tsx
app/src/components/Skeleton/: index.tsx
app/src/store/context/api/: index.tsx
app/src/store/context/main/: index.tsx
app/src/store/context/mdns/: index.tsx
app/src/store/context/ui/: index.tsx
app/src/utils/: index.ts
app/src/utils/hooks/camera/: index.tsx
app/src/utils/hooks/websocket/: index.ts
app/src/views/AppSettings/: index.tsx
app/src/views/CropSettings/: index.tsx
app/src/views/Home/: index.tsx
app/src/views/Settings/: index.tsx
repo-tools/scripts/: prepareCMD.sh
(+55 files in other folders)
