[package]
name = "eyetrackvr"
version = "1.0.0"
description = "Eye tracking for VR"
authors = ["DaOfficialWizard", "Luckmer", "RedHawk989"]
license = "MIT"
repository = "https://github.com/RedHawk989/EyeTrackVR"
default-run = "eyetrackvr"
edition = "2021"
rust-version = "1.64"

[dependencies]
serde_json = "1.0"
whoami = "1.2.3"
sysinfo = "0.28.4"
sprintf = "0.1.3"
lazy_static = "1.4.0"
log = "^0.4.14"
env_logger = "0.10.0"
futures-util = "0.3.25"
mdns-sd = "0.7.2"
zip-extract = "0.1.2"

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.tauri]
version = "1.1.1"
features = [
    "process-exit",
    "protocol-asset",
    "fs-all",
    "shell-sidecar",
    "dialog-all",
    "http-all",
    "icon-ico",
    "notification-all",
    "os-all",
    "path-all",
    "process-relaunch",
    "shell-open",
    "system-tray",
    "window-center",
    "window-close",
    "window-create",
    "window-hide",
    "window-maximize",
    "window-minimize",
    "window-request-user-attention",
    "window-set-decorations",
    "window-set-focus",
    "window-set-fullscreen",
    "window-set-position",
    "window-set-resizable",
    "window-set-size",
    "window-set-title",
    "window-show",
    "window-start-dragging",
    "window-unmaximize",
    "window-unminimize",
]

[dependencies.tauri-plugin-window-state]
git = "https://github.com/tauri-apps/plugins-workspace"
branch = "dev"

[dependencies.tauri-plugin-single-instance]
git = "https://github.com/tauri-apps/tauri-plugin-single-instance/"
branch = "dev"

[dependencies.tauri-plugin-upload]
git = "https://github.com/tauri-apps/plugins-workspace"
branch = "dev"

[dependencies.tauri-plugin-log]
git = "https://github.com/tauri-apps/plugins-workspace"
branch = "dev"

[dependencies.tauri-plugin-store]
git = "https://github.com/tauri-apps/plugins-workspace"
branch = "dev"

[dependencies.reqwest]
version = "0.11"
features = ["json", "rustls-tls"]

[dependencies.tokio]
version = "1"
features = ["full"]

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[build-dependencies.tauri-build]
version = "1.1.1"
features = []

[profile]
[profile.dev]
debug = 0

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
